pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport5.pkl
import* "https://www.apple.com/**.pkl" as allPklModules

res = allPklModules

